# field-2025

./: .envrc  .gitignore  Caddyfile  Dockerfile  Procfile  README.md  compose.yml  pyproject.toml  test.py
_js_ref/: bundle_0.0.44.js  worker.js
_json_ref/: challenge_complete.json  config_update.json  leaderboard_update.json  partition_update.json
_oneoff_migrations/: 001_kind.sql  002_backfill_hasfile.py  003_backfill_missings.py
alembic/: env.py  script.py.mako
alembic/versions/: 8b9e0f297a4d_is_backfill_for_partition_update.py  a04738c063ad_initial.py  a42e5a182dea_field_message_kind.py  b4d6b499c149_field_partition_update.py  bb20be1b9c8d_has_file_for_updates.py  f943c2af6bbf_field_message_jsonb.py  fb69987da9c6_reddit_unique_id.py
field/: __init__.py  client.py  connections.py  constants.py  consumer_grid.py  fields.py
field/consumers/: __init__.py  consumer_grid.py  counter.py  db_ingest.py  grid.py
field/model/: __init__.py
util/: get_message.py  get_tokenv2.py  initdb.py  stats.py
